User update (#13)
* add: controller for file uploads and summary endpoints

* fix: typo error in summary model

* fix: changed search by keycloakid for more consistence and changed columns type for text

* fix: missing relationship with author and summaryid

* fix: loop into summary all endpoints

* add: mail notification for summary review and payment file retrieval and update summary status to pending

* add: implement user registration, status update, and file retrieval for congress and student verification

* add: exception handling for duplicate user fields and enhanced registration validation rollback logic

* add: implement user registration, status update, and file retrieval for congress and student verification

* add: implement user registration, status update, and file retrieval for congress and student verification

* add: implement user registration, status update, and file retrieval for congress and student verification

* add: implement course management with user enrollment, course associations, and summary retrieval by presenter

* add: implement course management with user enrollment, course associations, and summary retrieval by presenter

* add: implement endpoints for retrieving user payment and student verification files without id

* add: implement course enrollment with payment file handling and course payment file retrieval

* add: enhance file and summary handling with logging, validations, and improved email notifications

* add: secure SummaryController endpoints with role-based authorization and enhance email notifications for summary updates

* add: implement Keycloak JWT decoder configuration, session management with HTTP cookies, and custom BearerTokenResolver

* refactor: clean up unused imports, simplify string validation, and reformat UserProfileDTO return structure

* add: secure user file retrieval endpoints with role-based checks and implement course payment file support

* add: integrate logging into SummaryService with @Slf4j 